feat: added utils classes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,10 +50,14 @@ endif()
 list(APPEND GAME_SOURCE
      Classes/AppDelegate.cpp
      Classes/HelloWorldScene.cpp
+     Classes/GLES-Render.cpp
+     Classes/ScreenUtils.cpp
      )
 list(APPEND GAME_HEADER
      Classes/AppDelegate.h
      Classes/HelloWorldScene.h
+     Classes/GLES-Render.h
+     Classes/ScreenUtils.h
      )
 
 if(ANDROID)
